# ferrauth-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Readme.md  coverage-report.json  rust-toolchain.toml
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: audit-schedule.yml  ci.yml  dependabot-auto-merge.yml
scripts/: cov-all.sh
src/: auth_method.rs  auth_tracing.rs  credentials.rs  error.rs  lib.rs  passkey.rs  password.rs  provider.rs  result.rs  telemetry.rs  totp.rs
tests/: auth_verify_tracing.rs  telemetry.rs
